--- a/src/Levels/codeModal/sectionHelp.css
+++ b/src/Levels/codeModal/sectionHelp.css
@@ -8,6 +8,7 @@
     text-align: start;
     background-color: #2a2a2a;
     box-shadow: 0 4px 3px #000000a8, inset -3px 3px 3px #3a3a3a, inset 3px 0 3px #3a3a3a;
+    transform: translateX(-100%);
 }
 @keyframes show-help {
     0% {z-index: 1; display: none; transform: translateY(-100%);}
